gcc/testsuite/rust/rustc/ui/impl-trait/in-trait/doesnt-satisfy_dg.rs
trait Foo {
    fn bar() -> impl std::fmt::Display;
}

impl Foo for () {
    fn bar() -> () {}
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

fn main() {}

